プルリクコメントを受けて修正

--- a/app/views/products/_tabs.html.slim
+++ b/app/views/products/_tabs.html.slim
@@ -4,5 +4,5 @@
       li.page-tabs__item
         = link_to "全て", products_path, class: "page-tabs__item-link #{current_link /^products-index/}"
       li.page-tabs__item
-        = "#{Product.unchecked.count}"
+        = Product.unchecked.count
         = link_to "未チェック", products_unchecked_index_path, class: "page-tabs__item-link #{current_link /^products-unchecked-index/}"
