--- a/app/assets/stylesheets/blocks/shared/_tab-nav.sass
+++ b/app/assets/stylesheets/blocks/shared/_tab-nav.sass
@@ -1,12 +1,7 @@
 .tab-nav
-  margin-bottom: 1.5rem
   border-bottom: solid 1px $background-color-shade
-  &.is-delete-margin-top
-    margin-top: -1.5rem
-    +media-breakpoint-down(sm)
-      margin-top: -1rem
-  &.is-in-tab
-    margin-top: -1rem
+  &:not(:last-child)
+    margin-bottom: 1.5rem
 
 .tab-nav__items
   display: flex
