--- a/app/views/admin/companies/index.html.slim
+++ b/app/views/admin/companies/index.html.slim
@@ -9,7 +9,8 @@ header.page-header
           i.fas.fa-plus
           | 会社作成
 
-= render "admin/admin_page_tabs"
+.page-tools
+  = render "admin/admin_page_tabs"
 
 .page-body
   .container.is-padding-horizontal-0-sm-down
