--- a/app/views/products/index.html.slim
+++ b/app/views/products/index.html.slim
@@ -5,11 +5,13 @@ header.page-header
     .page-header__container
       h2.page-header__title = title
 
-= render "products/tabs"
+.page-tools
+  = render "products/tabs"
 
-.container
-  = paginate @products, position: "top"
-  - if @products.present?
-    .thread-list.a-card
-      = render partial: "products/product", collection: @products, as: :product
-  = paginate @products, position: "bottom"
+.page-body
+  .container
+    = paginate @products, position: "top"
+    - if @products.present?
+      .thread-list.a-card
+        = render partial: "products/product", collection: @products, as: :product
+    = paginate @products, position: "bottom"
