--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -13,8 +13,10 @@ header.page-header.is-margin-bottom-0.is-border-bottom-none
               i.fas.fa-rss
               | みんなのブログを購読
 
-.page-body
+.page-tools
   = render "nav"
+
+.page-body
   .container
     .users
       .row.is-gutter-width-32
