--- a/app/views/admin/home/index.html.slim
+++ b/app/views/admin/home/index.html.slim
@@ -5,7 +5,8 @@ header.page-header
     .page-header__container
       h2.page-header__title = title
 
-= render "admin/admin_page_tabs"
+.page-tools
+  = render "admin/admin_page_tabs"
 
 .page-body
   .container
