--- a/app/views/admin/users/index.html.slim
+++ b/app/views/admin/users/index.html.slim
@@ -5,9 +5,10 @@ header.page-header
     .page-header__container
       h2.page-header__title = title
 
-= render "admin/admin_page_tabs"
+.page-tools
+  = render "admin/admin_page_tabs"
+  = render "nav"
 
 .page-body
-  = render "nav"
   .container.is-padding-horizontal-0-sm-down
     = render "admin/users/admin_users_table", users: @users
