--- a/app/views/kaminari/_paginator.html.slim
+++ b/app/views/kaminari/_paginator.html.slim
@@ -1,10 +1,11 @@
 = paginator.render do
   nav.pagination(class="#{"is-" + position}")
-    ul.pagination__items
-      == first_page_tag unless current_page.first?
-      == prev_page_tag unless current_page.first?
-      - each_page do |page|
-        - if page.left_outer? || page.right_outer? || page.inside_window?
-          == page_tag page
-      == next_page_tag unless current_page.last?
-      == last_page_tag unless current_page.last?
+    .container
+      ul.pagination__items
+        == first_page_tag unless current_page.first?
+        == prev_page_tag unless current_page.first?
+        - each_page do |page|
+          - if page.left_outer? || page.right_outer? || page.inside_window?
+            == page_tag page
+        == next_page_tag unless current_page.last?
+        == last_page_tag unless current_page.last?
