--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -8,7 +8,8 @@ header.page-header
           li.page-header-actions__item
             = link_to "ユーザー一覧", users_path, class: "is-button-simple-md-secondary"
 
-= render "page_tabs", resource: @user
+.page-tools
+  = render "page_tabs", resource: @user
 
 .page-body
   .container
