テストの文言を修正

--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -27,4 +27,4 @@ header.page-header.is-margin-bottom-0
         = render @questions
     - else
       .thread-list.is-empty
-        | まだありません。
+        | 質問はまだありません。
