--- a/app/views/announcements/_announcement.html.slim
+++ b/app/views/announcements/_announcement.html.slim
@@ -33,4 +33,4 @@
                   | 削除
 
   = link_to announcement.user, itempro: "url", class: "thread__author-link" do
-    = gravatar_tag announcement.user, secure: true, size: 120, html: { class: "thread__author-icon" }
+    = image_tag announcement.user.avatar.variant(resize: "120x120"), class: "thread__author-icon"
