--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,7 +4,7 @@
 .thread-comment(class="#{answer == answer.question.correct_answer ? "is-correct_answer" : ""}")
   .thread-comment__author
     = link_to answer.user, itempro: "url", class: "thread-comment__author-link" do
-      = gravatar_tag answer.user, secure: true, size: 200, html: { class: "thread-comment__author-icon" }
+      = image_tag answer.user.avatar.variant(resize: "200x200"), class: "thread-comment__author-icon"
   .thread-comment__body.a-card
     - if answer == correct_answer
       .answer-badge
