--- a/app/views/footprints/_footprint.html.slim
+++ b/app/views/footprints/_footprint.html.slim
@@ -1,3 +1,3 @@
 li.footprints-item
   = link_to footprint.user, itempro: "url" do
-    = gravatar_tag footprint.user, secure: true, size: 32, html: { class: "footprints-item__checker-icon is-#{footprint.user.login_name}", alt: footprint.user.login_name }
+    = image_tag footprint.user.avatar.variant(resize: "32x32"), class: "footprints-item__checker-icon is-#{footprint.user.login_name}", alt: footprint.user.login_name
