--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -50,7 +50,7 @@ header.page-header
                     | 削除
 
       = link_to @question.user, itempro: "url", class: "thread__author-link" do
-        = gravatar_tag @question.user, secure: true, size: 120, html: { class: "thread__author-icon" }
+        = image_tag @question.user.avatar.variant(resize: "120x120"), class: "thread__author-icon"
     .thread-comments-container
       h3.thread-comments-container__title
         | 回答・コメント
