--- a/app/views/reports/_recent_report.html.slim
+++ b/app/views/reports/_recent_report.html.slim
@@ -1,6 +1,6 @@
 .recent-reports-item(class="#{report.wip? ? "is-wip" : ""}")
   = link_to report, class: "recent-reports-item__link" do
-    = gravatar_tag report.user, secure: true, size: 88, html: { class: "recent-reports-item__user-icon" }
+    = image_tag report.user.avatar.variant(resize: "88x88"), class: "recent-reports-item__user-icon"
     h3.recent-reports-item__title
       - if report.wip?
         span.recent-reports-item__title-icon
