日付のフォームを追加

--- a/app/views/reports/_learning_time_fields.html.slim
+++ b/app/views/reports/_learning_time_fields.html.slim
@@ -7,12 +7,12 @@
         .form-selects.learning-time__started-at
           .form-selects__item
             .is-button-simple-md-secondary.is-select.is-block
-              = f.time_select :started_at, time_separator: tag, minute_step: 15
+              = f.datetime_select :started_at, time_separator: tag, minute_step: 15
       .form-item__time
         = f.label :finished_at, class: "a-label"
         .form-selects.learning-time__finished-at
           .form-selects__item
             .is-button-simple-md-secondary.is-select.is-block
-              = f.time_select :finished_at, time_separator: tag, minute_step: 15
+              = f.datetime_select :finished_at, time_separator: tag, minute_step: 15
       .form-item__times-action
         = link_to_remove_association "削除", f, class: "is-button-simple-md-secondary"
