--- a/app/views/reports/_learning_times.html.slim
+++ b/app/views/reports/_learning_times.html.slim
@@ -6,4 +6,4 @@
     ul.learning-times__items
       - @report.learning_times.each do |learning_time|
         li.learning-times__item
-          | #{l learning_time.started_at, format: :time_only} 〜 #{l learning_time.finished_at, format: :time_only}
+          | #{l learning_time.started_at, format: :short} 〜 #{l learning_time.finished_at, format: :short}
