--- a/app/views/users/_metas.html.slim
+++ b/app/views/users/_metas.html.slim
@@ -38,11 +38,18 @@
           = user.slack_account
         - else
           | 未登録
-    .user-metas__item
-      .user-metas__item-label
-        | 合計学習時間
-      .user-metas__item-value
-        = number_with_precision(user.total_learning_time, precision: 1) + "時間"
+    - unless user.admin? || user.adviser?
+      .user-metas__item
+        .user-metas__item-label
+          | 合計学習時間
+        .user-metas__item-value
+          = number_with_precision(user.total_learning_time, precision: 1) + "時間"
+          - if @user.graduated_on.present?
+            | （#{l @user.graduated_on} 卒業）
+          - elsif @user.retired_on.present?
+            | （#{l @user.retired_on} リタイア）
+          - else
+            | （学習開始から#{user.dates_from_start_learning}日目）
     - unless user.company.id == 1
       .user-metas__item
         .user-metas__item-label
