--- a/app/views/users/practices/_active_practices.html.slim
+++ b/app/views/users/practices/_active_practices.html.slim
@@ -1,8 +1,9 @@
-.active-practices
-  h2.active-practices__title
-    | 進行中のプラクティス
-  .active-practices-list
-    ul.active-practices-list__items
+.a-card
+  header.card-header
+    h2.card-header__title
+      | 進行中のプラクティス
+  .card-practices.is-active
+    ul.card-practices__items
       - user.active_practices.each do |practice|
-        li.active-practices-list-item
-          = link_to practice.title, practice, class: "active-practices-list-item__link"
+        li.card-practices__item
+          = link_to practice.title, practice, class: "card-practices__item-link"
