Adminユーザーのトップページに未チェックの日報数/提出物数/質問数を表示させた

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -38,3 +38,6 @@ header.page-header
           - if @user.github_account
             .a-card
               = render "users/github_grass", user: @user
+          - if @user.admin?
+            .a-card
+              = render "users/unchecked"
