--- a/app/views/users/_metas.html.slim
+++ b/app/views/users/_metas.html.slim
@@ -44,12 +44,7 @@
           | 合計学習時間
         .user-metas__item-value
           = number_with_precision(user.total_learning_time, precision: 1) + "時間"
-          - if @user.graduated_on.present?
-            | （#{l @user.graduated_on} 卒業）
-          - elsif @user.retired_on.present?
-            | （#{l @user.retired_on} リタイア）
-          - else
-            | （学習開始から#{user.dates_from_start_learning}日目）
+          = render "user_learning_status", user: user
     - unless user.company.id == 1
       .user-metas__item
         .user-metas__item-label
