プロフィールの合計学習時間欄の時間数と経過日数の間にスラッシュを入れた

--- a/app/views/users/_metas.html.slim
+++ b/app/views/users/_metas.html.slim
@@ -43,7 +43,7 @@
         .user-metas__item-label
           | 合計学習時間
         .user-metas__item-value
-          = number_with_precision(user.total_learning_time, precision: 1) + "時間"
+          = number_with_precision(user.total_learning_time, precision: 1) + "時間 / "
           = render "user_learning_status", user: user
     - unless user.company.id == 1
       .user-metas__item
