partial名を変更した

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -40,4 +40,4 @@ header.page-header
               = render "users/github_grass", user: @user
           - if @user.admin?
             .a-card
-              = render "users/unchecked_number_table"
+              = render "users/unchecked"
