未チェックの日報が0件の場合はタブに数字を出さないようにした

--- a/app/views/reports/_tabs.html.slim
+++ b/app/views/reports/_tabs.html.slim
@@ -6,5 +6,6 @@
       li.page-tabs__item
         = link_to reports_unchecked_index_path, class: "page-tabs__item-link #{current_link /^reports-unchecked-index/}" do
           | 未チェック
-          .page-tabs__item-count.a-notification-count
-            = Report.unchecked.not_wip.count
+          -  if Report.unchecked.not_wip.count > 0
+            .page-tabs__item-count.a-notification-count
+              = Report.unchecked.not_wip.count
