--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -4,5 +4,17 @@
   = form_with model: comment, local: true, html: { class: "thread-comment-form__form a-card" } do |f|
     = f.hidden_field :commentable_type
     = f.hidden_field :commentable_id
-    = render "comment_form_description", f: f
-    = render "comment_form_action", f: f, resource: comment
+    .thread-comment-form__tabs.js-tabs
+      .thread-comment-form__tab.js-tabs__tab.is-active
+        | コメント
+      .thread-comment-form__tab.js-tabs__tab
+        | プレビュー
+    .thread-comment-form__markdown-parent.js-markdown-parent
+      .thread-comment-form__markdown.js-tabs__content.is-active
+        = f.text_area :description, required: true, class: "a-textarea js-warning-form thread-comment-form__textarea js-markdown", data: { "preview": ".js-preview" }
+      .thread-comment-form__markdown.js-tabs__content
+        .js-preview.is-long-text-style.thread-comment-form__preview
+
+    .thread-comment-form__action
+      - comment_label = comment.persisted? ? "保存する" : "コメントする"
+      = f.submit comment_label, class: "is-button-simple-lg-warning"
