--- a/app/views/admin/companies/_form.html.slim
+++ b/app/views/admin/companies/_form.html.slim
@@ -15,6 +15,14 @@
         .col-md-6.col-xs-12
           = f.label :website, class: "a-label"
           = f.text_field :website, class: "a-text-input"
+    .form-item
+      .row
+        .col-md-6.col-xs-12
+          = f.label 'ロゴ', class: "a-label"
+          = f.file_field :logo
+          br
+          - if current_user.company.logo.attached?
+            = image_tag company.logo, width: 500
   .form-actions
     ul.form-actions__items
       li.form-actions__item
