--- a/app/views/users/_profile.html.slim
+++ b/app/views/users/_profile.html.slim
@@ -6,4 +6,7 @@
       = user.login_name
     h2.user-profile__full-name
       = user.full_name
+  .user-company__logo
+    - if user.company.logo.attached?
+      = image_tag user.company.logo, width: 500
   = render "users/sns", user: user
