研修生roleを作成した

--- a/app/views/admin/users/_admin_users_table.html.slim
+++ b/app/views/admin/users/_admin_users_table.html.slim
@@ -21,6 +21,8 @@
               | 管理者
             - elsif user.adviser
               | アドバイザー
+            - elsif user.trainee
+              | 研修生
             - elsif user.retired_on?
               | リタイア
             - elsif user.graduated_on?
