--- a/app/views/admin/users/_nav.html.slim
+++ b/app/views/admin/users/_nav.html.slim
@@ -1,6 +1,6 @@
 nav.tab-nav.is-in-tab
   .container.is-padding-horizontal-0-sm-down
     ul.tab-nav__items
-      - %w(all student inactive retired graduate adviser mentor year_end_party).each do |target|
+      - %w(all student inactive retired graduate adviser mentor trainee year_end_party).each do |target|
         li.tab-nav__item
           = link_to t("target.#{target}"), admin_users_path(target: target), class: (@target == target ? ["is-active"] : []) << "tab-nav__item-link"
