--- a/app/views/articles/index.html.slim
+++ b/app/views/articles/index.html.slim
@@ -1,16 +1,22 @@
 header.page-header.is-margin-bottom-0
   .container
     .page-header__container
-      h2.page-header__title = "ブログ記事一覧"
+      - if params[:tag]
+        h2.page-header__title = "タグ: #{params[:tag]} のブログ記事一覧"
+      - else
+        h2.page-header__title = "ブログ記事一覧"
       .page-header-actions
         .page-header-actions__items
           .page-header-actions__item
-            = link_to new_report_path, class: "is-button-simple-md-warning" do
+            = link_to new_article_path, class: "is-button-simple-md-warning" do
               i.fas.fa-plus
               | ブログ記事作成
 
 .page-body
   .container
+    .tag_cloud
+      - tag_cloud Article.tag_counts, %w{s m l} do |tag, css_class|
+        = link_to tag.name, tag_path(tag.name)
     .practice-contents
       - @articles.each do |article|
         header.practice-contents__header
@@ -19,6 +25,7 @@ header.page-header.is-margin-bottom-0
         section.practice-content.a-card
           .practice-content__body.is-article.js-markdown-view.js-target-blank.is-long-text-style
             = article.body.truncate(50)
+          = raw article.tag_list.map { |t| link_to t, tag_path(t) }.join(', ')
           - if current_user.admin?
             footer.card-footer
               .card-footer-actions
