--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -13,11 +13,11 @@ header.page-header
             li.page-header-actions__item
               = link_to new_article_path, class: "is-button-simple-md-warning" do
                 i.fas.fa-plus
-                | ブログ作成
+                | ブログ記事作成
           li.page-header-actions__item
             = link_to articles_path, class: "is-button-simple-md-secondary" do
               i.fas.fa-angle-left
-              | ブログ一覧
+              | ブログ記事一覧
 
 .page-body
   .container
@@ -25,6 +25,9 @@ header.page-header
       header.practice-contents__header
         h1.practice-contents__title
           = @article.title
+          br
+          = raw @article.tag_list.map { |t| link_to t, tag_path(t) }.join(',')
       section.practice-content.a-card
         .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
           = @article.body
+      section.practice-content.a-card
