--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -21,7 +21,7 @@
     .form-item
       .row
         .col-md-6.col-xs-12
-          = f.label :tag_list, 'タグを入力してください（カンマ区切り）', class: "a-label"
+          = f.label :tag_list, "タグを入力してください（カンマ区切り）", class: "a-label"
           = f.text_field :tag_list, class: "a-text-input js-warning-form"
 
   .form-actions
