--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -26,7 +26,7 @@ header.page-header
         h1.practice-contents__title
           = @article.title
           br
-          = raw @article.tag_list.map { |t| link_to t, tag_path(t) }.join(',')
+          = raw @article.tag_list.map { |t| link_to t, tag_path(t) }.join(",")
       section.practice-content.a-card
         .practice-content__body.is-practice.js-markdown-view.js-target-blank.is-long-text-style
           = @article.body
