--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -37,9 +37,19 @@
 
     .auth-form-item
       = f.label :avatar, class: "a-sm-label is-required"
-      = f.file_field :avatar, class: "a-sm-text-input"
-      - if f.object.avatar.attached?
-        p = image_tag f.object.avatar.variant(resize: "100x100")
+      .auth-form-item-avatar
+        - if f.object.avatar.attached?
+          = image_tag f.object.avatar.variant(resize: "100x100"), class: "auth-form-item-avatar__image"
+        label.a-file-input.is-button-simple-md-warning
+          - if f.object.avatar.attached?
+            | 画像を変更
+          - else
+            | 画像を選択
+          = f.file_field :avatar
+      - unless user.adviser?
+        .auth-form-item__help
+          p
+            | 著作権侵害にならない画像を使用してください。
 
     - unless user.adviser?
       .auth-form-item.is-hidden
