パーシャル名を変更

--- a/app/views/users/practices/_completed_practices.html.slim
+++ b/app/views/users/practices/_completed_practices.html.slim
@@ -2,7 +2,7 @@
   header.card-header
     h2.card-header__title 完了したプラクティス
     .card-header__sub-title
-      = render "users/user_learning_status", user: @user
+      = render "users/learning_status", user: @user
   .completed-practices__body
     = render "completed_practices_progress", user: @user
     = render "completed_practices_list", user: @user
