--- a/app/views/users/_metas.html.slim
+++ b/app/views/users/_metas.html.slim
@@ -44,7 +44,7 @@
           | 合計学習時間
         .user-metas__item-value
           = number_with_precision(user.total_learning_time, precision: 1) + "時間 / "
-          = render "user_learning_status", user: user
+          = render "learning_status", user: user
     - unless user.company.id == 1
       .user-metas__item
         .user-metas__item-label
