--- a/app/views/admin/users/_admin_users_table.html.slim
+++ b/app/views/admin/users/_admin_users_table.html.slim
@@ -5,45 +5,20 @@
         th.admin-table__label ステータス
         th.admin-table__label
           | ユーザー名
-          - if params[:order_by] == "login_name" && @direction == "asc"
-            = link_to admin_users_path(order_by: :login_name, direction: :desc, target: @target), class: "is-button-simple-xs-secondary is-icon" do
-              i.fas.fa-caret-up
-          - else
-            = link_to admin_users_path(order_by: :login_name, direction: :asc, target: @target), class: "is-button-simple-xs-secondary is-icon" do
-              i.fas.fa-caret-down
+          = render "admin_users", {order_by: "login_name", direction: @direction, target: @target}
         th.admin-table__label
           | 会社
-          - if params[:order_by] == "company_id" && @direction == "asc"
-            = link_to admin_users_path(order_by: :company_id, direction: :desc, target: @target), class: "is-button-simple-xs-secondary is-icon" do
-              i.fas.fa-caret-up
-          - else
-            = link_to admin_users_path(order_by: :company_id, direction: :asc, target: @target), class: "is-button-simple-xs-secondary is-icon" do
-              i.fas.fa-caret-down
+          = render "admin_users", {order_by: "company_id", direction: @direction, target: @target}
         th.admin-table__label Slack
         th.admin-table__label
           | 最終アクセス日時
-          - if params[:order_by] == "updated_at" && @direction == "desc"
-            = link_to admin_users_path(order_by: :updated_at, direction: :asc, target: @target), class: "is-button-simple-xs-secondary is-icon" do
-              i.fas.fa-caret-up
-          - else
-            = link_to admin_users_path(order_by: :updated_at, direction: :desc, target: @target), class: "is-button-simple-xs-secondary is-icon" do
-              i.fas.fa-caret-down
+          = render "admin_users", {order_by: "updated_at", direction: @direction, target: @target}
         th.admin-table__label
           | 日報
-          - if params[:order_by] == "report" && @direction == "desc"
-            = link_to admin_users_path(order_by: :report, direction: :asc, target: @target), class: "is-button-simple-xs-secondary is-icon" do
-              i.fas.fa-caret-up
-          - else
-            = link_to admin_users_path(order_by: :report, direction: :desc, target: @target), class: "is-button-simple-xs-secondary is-icon" do
-              i.fas.fa-caret-down
+          = render "admin_users", {order_by: "report", direction: @direction, target: @target}
         th.admin-table__label
           | コメント
-          - if params[:order_by] == "comment" && @direction == "desc"
-            = link_to admin_users_path(order_by: :comment, direction: :asc, target: @target), class: "is-button-simple-xs-secondary is-icon" do
-              i.fas.fa-caret-up
-          - else
-            = link_to admin_users_path(order_by: :comment, direction: :desc, target: @target), class: "is-button-simple-xs-secondary is-icon" do
-              i.fas.fa-caret-down
+          = render "admin_users", {order_by: "comment", direction: @direction, target: @target}
         th.admin-table__label 進捗
         th.admin-table__label SNS
         th.admin-table__label 操作
