ファイルアップロードフォームのテストを修正
落ちていたので

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -48,8 +48,7 @@
           = f.file_field :avatar
       - unless user.adviser?
         .auth-form-item__help
-          p
-            | 著作権侵害にならない画像を使用してください。
+          p 著作権侵害にならない画像を使用してください。
 
     - unless user.adviser?
       .auth-form-item.is-hidden
